src/test/deca/context/invalid/double_decla.deca
//ERROR :7:
{
        int var =7;
        float x=9, y=10.6;
        while (false != true) {
              if (x>y) {
                   bool var = true;
              }
              else {
                   bool var = false;
              }
        }
}